package table_maintenance

import (
	"context"
	"fmt"
	"time"

	"github.com/seaweedfs/seaweedfs/weed/glog"
	"github.com/seaweedfs/seaweedfs/weed/pb/worker_pb"
	"github.com/seaweedfs/seaweedfs/weed/worker/types"
	"github.com/seaweedfs/seaweedfs/weed/worker/types/base"
)

// TableMaintenanceTask handles maintenance operations for S3 Table Buckets
// This includes:
// - Iceberg table compaction
// - Snapshot expiration
// - Orphan file cleanup
// - Manifest optimization
type TableMaintenanceTask struct {
	*base.BaseTask
	TableBucket    string
	Namespace      string
	TableName      string
	MaintenanceJob *TableMaintenanceJob
	status         types.TaskStatus
	startTime      time.Time
	progress       float64
}

// TableMaintenanceJob represents a specific maintenance operation for a table
type TableMaintenanceJob struct {
	JobType     TableMaintenanceJobType `json:"job_type"`
	TableBucket string                  `json:"table_bucket"`
	Namespace   string                  `json:"namespace"`
	TableName   string                  `json:"table_name"`
	TablePath   string                  `json:"table_path"`
	Priority    types.TaskPriority      `json:"priority"`
	Reason      string                  `json:"reason"`
	CreatedAt   time.Time               `json:"created_at"`
	Params      map[string]string       `json:"params,omitempty"`
}

// TableMaintenanceJobType represents different table maintenance operations
type TableMaintenanceJobType string

const (
	// JobTypeCompaction compacts small data files into larger ones
	JobTypeCompaction TableMaintenanceJobType = "compaction"
	// JobTypeSnapshotExpiration removes expired snapshots
	JobTypeSnapshotExpiration TableMaintenanceJobType = "snapshot_expiration"
	// JobTypeOrphanCleanup removes orphaned data and metadata files
	JobTypeOrphanCleanup TableMaintenanceJobType = "orphan_cleanup"
	// JobTypeManifestRewrite rewrites manifest files for optimization
	JobTypeManifestRewrite TableMaintenanceJobType = "manifest_rewrite"
)

// NewTableMaintenanceTask creates a new table maintenance task
func NewTableMaintenanceTask(id, tableBucket, namespace, tableName string, job *TableMaintenanceJob) *TableMaintenanceTask {
	return &TableMaintenanceTask{
		BaseTask:       base.NewBaseTask(id, types.TaskTypeTableMaintenance),
		TableBucket:    tableBucket,
		Namespace:      namespace,
		TableName:      tableName,
		MaintenanceJob: job,
		status:         types.TaskStatusPending,
	}
}

// Validate validates the task parameters
func (t *TableMaintenanceTask) Validate(params *worker_pb.TaskParams) error {
	if params == nil {
		return fmt.Errorf("task params cannot be nil")
	}
	return nil
}

// EstimateTime estimates the time needed for the task
func (t *TableMaintenanceTask) EstimateTime(params *worker_pb.TaskParams) time.Duration {
	// Estimate based on job type
	switch t.MaintenanceJob.JobType {
	case JobTypeCompaction:
		return 5 * time.Minute
	case JobTypeSnapshotExpiration:
		return 1 * time.Minute
	case JobTypeOrphanCleanup:
		return 3 * time.Minute
	case JobTypeManifestRewrite:
		return 2 * time.Minute
	default:
		return 5 * time.Minute
	}
}

// GetID returns the task ID
func (t *TableMaintenanceTask) GetID() string {
	return t.ID()
}

// GetType returns the task type
func (t *TableMaintenanceTask) GetType() types.TaskType {
	return types.TaskTypeTableMaintenance
}

// GetStatus returns the current task status
func (t *TableMaintenanceTask) GetStatus() types.TaskStatus {
	return t.status
}

// GetProgress returns the task progress (0-100)
func (t *TableMaintenanceTask) GetProgress() float64 {
	return t.progress
}

// Execute runs the table maintenance task
func (t *TableMaintenanceTask) Execute(ctx context.Context, params *worker_pb.TaskParams) error {
	t.status = types.TaskStatusInProgress
	t.startTime = time.Now()

	glog.Infof("Starting table maintenance task %s: %s on %s/%s/%s",
		t.ID(), t.MaintenanceJob.JobType, t.TableBucket, t.Namespace, t.TableName)

	defer func() {
		if t.status == types.TaskStatusInProgress {
			t.status = types.TaskStatusCompleted
		}
		glog.Infof("Table maintenance task %s completed with status: %s", t.ID(), t.status)
	}()

	switch t.MaintenanceJob.JobType {
	case JobTypeCompaction:
		return t.executeCompaction(ctx)
	case JobTypeSnapshotExpiration:
		return t.executeSnapshotExpiration(ctx)
	case JobTypeOrphanCleanup:
		return t.executeOrphanCleanup(ctx)
	case JobTypeManifestRewrite:
		return t.executeManifestRewrite(ctx)
	default:
		t.status = types.TaskStatusFailed
		return fmt.Errorf("unknown job type: %s", t.MaintenanceJob.JobType)
	}
}

// executeCompaction performs Iceberg table compaction
func (t *TableMaintenanceTask) executeCompaction(ctx context.Context) error {
	t.progress = 10
	glog.V(1).Infof("Executing compaction for table %s/%s/%s", t.TableBucket, t.Namespace, t.TableName)

	// TODO: Implement actual Iceberg compaction logic
	// This would:
	// 1. Read current table metadata
	// 2. Identify small data files that should be compacted
	// 3. Create new compacted files
	// 4. Update metadata to point to new files
	// 5. Mark old files for deletion

	t.progress = 100
	return nil
}

// executeSnapshotExpiration removes expired snapshots
func (t *TableMaintenanceTask) executeSnapshotExpiration(ctx context.Context) error {
	t.progress = 10
	glog.V(1).Infof("Executing snapshot expiration for table %s/%s/%s", t.TableBucket, t.Namespace, t.TableName)

	// TODO: Implement snapshot expiration logic
	// This would:
	// 1. Read current table metadata
	// 2. Identify snapshots older than retention period
	// 3. Remove expired snapshot metadata
	// 4. Identify files only referenced by expired snapshots
	// 5. Mark those files for deletion

	t.progress = 100
	return nil
}

// executeOrphanCleanup removes orphaned files
func (t *TableMaintenanceTask) executeOrphanCleanup(ctx context.Context) error {
	t.progress = 10
	glog.V(1).Infof("Executing orphan cleanup for table %s/%s/%s", t.TableBucket, t.Namespace, t.TableName)

	// TODO: Implement orphan file cleanup logic
	// This would:
	// 1. List all files in data/ and metadata/ directories
	// 2. Read current table metadata to get referenced files
	// 3. Delete files not referenced by any snapshot

	t.progress = 100
	return nil
}

// executeManifestRewrite optimizes manifest files
func (t *TableMaintenanceTask) executeManifestRewrite(ctx context.Context) error {
	t.progress = 10
	glog.V(1).Infof("Executing manifest rewrite for table %s/%s/%s", t.TableBucket, t.Namespace, t.TableName)

	// TODO: Implement manifest rewrite logic
	// This would:
	// 1. Read current manifest files
	// 2. Combine small manifests
	// 3. Remove deleted file entries from manifests
	// 4. Write optimized manifests
	// 5. Update metadata to point to new manifests

	t.progress = 100
	return nil
}

// Cancel cancels the task
func (t *TableMaintenanceTask) Cancel() error {
	t.status = types.TaskStatusCancelled
	return nil
}

// Cleanup performs cleanup after task completion
func (t *TableMaintenanceTask) Cleanup() error {
	return nil
}
